TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "138888069725248" [label="Start"];
  "138888069725248" -> "138888069834032";
  "138888069834032" [label="Code"];
  "138888069834032" -> "138888069834224";
  "138888069834224" [label="Function"];
  "138888069834224" -> "138888069831824";
  "138888069834224" -> "138888069831680";
  "138888069834224" -> "138888069831632";
  "138888069831824" [label="main IDENTIFIER"];
  "138888069831680" [label="Parameters"];
  "138888069831632" [label="Code"];
  "138888069831632" -> "138888069831536";
  "138888069831632" -> "138888069829808";
  "138888069831632" -> "138888069834896";
  "138888069831536" [label="Code"];
  "138888069831536" -> "138888069827648";
  "138888069827648" [label="Declaration"];
  "138888069827648" -> "138888069825920";
  "138888069827648" -> "138888069828944";
  "138888069825920" [label="x IDENTIFIER"];
  "138888069828944" [label="1 INT"];
  "138888069829808" [label="Code"];
  "138888069829808" -> "138888069834512";
  "138888069834512" [label="Declaration"];
  "138888069834512" -> "138888069834704";
  "138888069834512" -> "138888069834848";
  "138888069834704" [label="x IDENTIFIER"];
  "138888069834848" [label="2 INT"];
  "138888069834896" [label="Return"];
  "138888069834896" -> "138888069835088";
  "138888069835088" [label="0 INT"];
}
